2000-01-24  Per Bothner  <per@bothner.com>

	* lists.scm (cons):  New procedure, replaces kawa/standard/cons.java.
	* vectors.scm (vector):  New procedure, replaces
 	kawa/standard/vector_v.java.

	* numbers.scm (asin): New procedure, replaces kawa/standard/asin.java.
	(acos): New procedure, replaces kawa/standard/acos.java.
	* ports.scm (close-in-port):  New procedure, replaces
 	kawa/standard/close_input_port.java.
	* vectors.scm (vector-fill!):  New procedure, replaces
 	kawa/standard/vector_fill_b.java.
 	(make-vector):  New procedure, replaces kawa/standard/make_vector.java.

	* reflection.scm:  Update class names for kawa.lang.Prim* classes
	moved to gnu.kawa.reflect.

2000-01-23  Per Bothner  <per@bothner.com>

	* misc.scm (values):  New procedure.

	* files.scm (create-directory):  Style fix.

	* strings.scm (make-string):  Declare count to be <int>.

	* syntax.scm (defmacro):  Add missing begin (because syntax-case
	takes `[fender] form' rather than `form ..').

1999-12-27  Per Bothner  <per@bothner.com>

	* files.scm (*temp-file-number*):  Define using (new) define-private.

1999-12-10  Per Bothner  <per@bothner.com>

	* uniform.scm:  New file.  Implements SRFI-4.
	* lists.scm (length):  New procedure.

1999-12-06  Per Bothner  <per@bothner.com>

	* vectors.scm (vector-length):  Use new `::' type-specification syntax.
	* system.scm (tokenize-string-using-shell):  Add type specification.

1999-11-15  Per Bothner  <per@bothner.com>

	* ports.scm (open-output-string, get-output-string):  New procedures.
	* characters.scm, vectors.scm:  Use invoke and invoke-static.
	* strings.scm (make-string):  Use (make <string> ...).

1999-10-25  Per Bothner  <per@bothner.com>

	* kawa/lib/ports.scm (open-input-string):  New procedure. 
	* kawa/lib/thread.scm (future):  Fix typo:  delay -> future.

1999-09-10  Per Bothner  <per@bothner.com>

	* files.scm (*temp-file-number*):  Revert to non-private, until we
	work out handling of private non-static variables.